Adicionando as setas para passar as imgaens do tênis quando a tela for para a versão mobile

--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
 
     <div class="card">
         <div class="images">
+            <img class="arrow arrowBack" src="src/images/icon-next.svg" alt="Seta de voltar">
             <img id="imgShowcase" class='imgShowcase' src="src/images/image-product-1.jpg" alt="">
+            <img class="arrow arrowNext" src="src/images/icon-next.svg" alt="Seta de passar">
             <div>
                 <img onclick="product1()" class='imgSmall' src="src/images/image-product-1-thumbnail.jpg" alt='Imagem um' />
 
