--- a/index.html
+++ b/index.html
@@ -56,11 +56,19 @@
 
     <div class="card">
         <div class="images">
-            <img class="arrow arrowBack" src="src/images/icon-next.svg" alt="Seta de voltar">
-            <img id="imgShowcase" class='imgShowcase' src="src/images/image-product-1.jpg" alt="">
-            <img class="arrow arrowNext" src="src/images/icon-next.svg" alt="Seta de passar">
+            <div class="carousel">
+                <img class="arrow arrowBack" src="src/images/icon-next.svg" alt="Seta de voltar">
+
+                <img id="imgShowcase" class='imgShowcase' src="src/images/image-product-1.jpg" alt="Imagem 1 do tênis">
+                <img id="imgShowcase" class='imgShowcase' src="src/images/image-product-2.jpg" alt="Imagem 2 do tênis">
+                <img id="imgShowcase" class='imgShowcase' src="src/images/image-product-3.jpg" alt="Imagem 3 do tênis">
+                <img id="imgShowcase" class='imgShowcase' src="src/images/image-product-4.jpg" alt="Imagem 4 do tênis">
+
+                <img class="arrow arrowNext" src="src/images/icon-next.svg" alt="Seta de passar">
+            </div>
             <div>
-                <img onclick="product1()" class='imgSmall' src="src/images/image-product-1-thumbnail.jpg" alt='Imagem um' />
+                <img onclick="product1()" class='imgSmall' src="src/images/image-product-1-thumbnail.jpg"
+                    alt='Imagem um' />
 
                 <img onclick="product2()" class='imgSmall' src="src/images/image-product-2-thumbnail.jpg"
                     alt='Imagem dois' />
