--- a/index.html
+++ b/index.html
@@ -59,14 +59,15 @@
             <div class="carousel">
                 <img class="arrow arrowBack" src="src/images/icon-next.svg" alt="Seta de voltar">
 
-                <img id="imgShowcase" class='imgShowcase' src="src/images/image-product-1.jpg" alt="Imagem 1 do tênis">
-                <img id="imgShowcase" class='imgShowcase' src="src/images/image-product-2.jpg" alt="Imagem 2 do tênis">
-                <img id="imgShowcase" class='imgShowcase' src="src/images/image-product-3.jpg" alt="Imagem 3 do tênis">
-                <img id="imgShowcase" class='imgShowcase' src="src/images/image-product-4.jpg" alt="Imagem 4 do tênis">
+                <img class='imgShowcase slide' src="src/images/image-product-4.jpg" alt="Imagem 4 do tênis">
+                <img class='imgShowcase slide' src="src/images/image-product-3.jpg" alt="Imagem 3 do tênis">
+                <img class='imgShowcase slide' src="src/images/image-product-2.jpg" alt="Imagem 2 do tênis">
+                <img id="imgShowcase" class='imgShowcase slide' src="src/images/image-product-1.jpg" alt="Imagem 1 do tênis">
 
                 <img class="arrow arrowNext" src="src/images/icon-next.svg" alt="Seta de passar">
             </div>
-            <div>
+
+            <div class="imgSmall-container">
                 <img onclick="product1()" class='imgSmall' src="src/images/image-product-1-thumbnail.jpg"
                     alt='Imagem um' />
 
