--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
     <div class="card">
         <div class="images">
             <div class="carousel">
-                <img class="arrow arrowBack" src="src/images/icon-next.svg" alt="Seta de voltar">
-
                 <img class='imgShowcase slide' src="src/images/image-product-4.jpg" alt="Imagem 4 do tênis">
                 <img class='imgShowcase slide' src="src/images/image-product-3.jpg" alt="Imagem 3 do tênis">
                 <img class='imgShowcase slide' src="src/images/image-product-2.jpg" alt="Imagem 2 do tênis">
-                <img id="imgShowcase" class='imgShowcase slide' src="src/images/image-product-1.jpg" alt="Imagem 1 do tênis">
-
+                <img id="imgShowcase" class='imgShowcase slide' src="src/images/image-product-1.jpg"
+                    alt="Imagem 1 do tênis">
+                    
+                <img class="arrow arrowBack" src="src/images/icon-next.svg" alt="Seta de voltar">
                 <img class="arrow arrowNext" src="src/images/icon-next.svg" alt="Seta de passar">
             </div>
 
