Fazendo a lógica para o carrossel ser de fato funcial, mas ainda falta alguns detalhes para ficar pronto

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <img class='imgShowcase slide' src="src/images/image-product-4.jpg" alt="Imagem 4 do tênis">
                 <img class='imgShowcase slide' src="src/images/image-product-3.jpg" alt="Imagem 3 do tênis">
                 <img class='imgShowcase slide' src="src/images/image-product-2.jpg" alt="Imagem 2 do tênis">
-                <img id="imgShowcase" class='imgShowcase slide' src="src/images/image-product-1.jpg"
+                <img id="imgShowcase" class='imgShowcase slide.on' src="src/images/image-product-1.jpg"
                     alt="Imagem 1 do tênis">
                     
                 <img class="arrow arrowBack" src="src/images/icon-next.svg" alt="Seta de voltar">
