Fazendo o carrossel sem usar o js

--- a/index.html
+++ b/index.html
@@ -56,16 +56,17 @@
 
     <div class="card">
         <div class="images">
+
+            <img id="imgShowcase" class='imgShowcase slide.on' src="src/images/image-product-1.jpg"
+                alt="Imagem 1 do tênis">
+
             <div class="carousel">
-                <img class='imgShowcase slide' src="src/images/image-product-4.jpg" alt="Imagem 4 do tênis">
-                <img class='imgShowcase slide' src="src/images/image-product-3.jpg" alt="Imagem 3 do tênis">
-                <img class='imgShowcase slide' src="src/images/image-product-2.jpg" alt="Imagem 2 do tênis">
-                <img id="imgShowcase" class='imgShowcase slide.on' src="src/images/image-product-1.jpg"
-                    alt="Imagem 1 do tênis">
-                    
-                <img class="arrow arrowBack" src="src/images/icon-next.svg" alt="Seta de voltar">
-                <img class="arrow arrowNext" src="src/images/icon-next.svg" alt="Seta de passar">
+                <a onclick="product1()">xxx</a>
+                <a onclick="product2()">xxx</a>
+                <a onclick="product3()">xxx</a>
+                <a onclick="product4()">xxx</a>
             </div>
+
 
             <div class="imgSmall-container">
                 <img onclick="product1()" class='imgSmall' src="src/images/image-product-1-thumbnail.jpg"
